Improved JEI visualization for Filling and Polishing